# WeatherApp

./: .gitignore  CMakeLists.txt  Doxyfile  compile.bat  compile.sh  compile_fast.sh  compile_run.sh  main.cpp  notes.txt  readme.md  run.bat  run.sh
examples/: sine_wave
include/: HttpFetcher.h  JSONTools.h  LocalDB.h  Panel.h  PanelAbout.h  PanelSensor.h  PanelStart.h  PanelStation.h  WindowMain.h
src/: HttpFetcher.cpp  JSONTools.cpp  LocalDB.cpp  Panel.cpp  PanelAbout.cpp  PanelSensor.cpp  PanelStart.cpp  PanelStation.cpp  WindowMain.cpp  main.cpp
tests/: CMakeLists.txt  JSONToolsTest.cpp  compile_fast.bat  compile_run.bat  run.bat
